<resources>
    <string name="app_name">EzSchedule</string>

    <!-- Screen name -->
    <string name="frag_calendar_name">Events</string>
    <string name="frag_dashboard_name">2023</string>
    <string name="frag_services_name">Services</string>
    <string name="frag_payments_name">History</string>
    <string name="frag_forum_name">Posts</string>
    <string name="frag_settings_name">Settings</string>
    <string name="frag_schedule_name">Schedule</string>
    <string name="frag_not_found_name">Not found</string>

    <!-- Toolbar image -->
    <string name="toolbar_image_base_url">https://ezscheduleusersimages.blob.core.windows.net/ezschedules/%s</string>

    <!-- Menu Popup -->
    <string name="bt_logout">Logout</string>
    <string name="bt_settings">Settings</string>
    <string name="bt_logout_error">There was some error</string>

    <!-- Logout Dialog -->
    <string name="dialog_logout_tv_title">Logged out</string>
    <string name="dialog_logout_tv_description">Dear user, your session has expired</string>
    <string name="dialog_logout_btn_confirm">Confirm</string>

    <!-- Login Screen -->
    <string name="frag_login_tv_title_login">Login</string>
    <string name="frag_login_btn_login">Login</string>
    <string name="frag_login_tv_forgot_password">Forgot my password</string>
    <string name="frag_login_edt_hint_email">Email</string>
    <string name="frag_login_edt_hint_password">Password</string>
    <string name="frag_login_edt_email_error">Invalid email</string>
    <string name="frag_login_client_exception">User not found</string>
    <string name="frag_login_server_exception">Server error</string>
    <string name="frag_login_unknown_exception">Unknown error</string>

    <!-- Settings Screen -->
    <string name="frag_settings_btn_previous">Previous screen</string>
    <string name="frag_settings_btn_save">Save</string>
    <string name="bottom_sheet_settings_hint_name">Name</string>
    <string name="bottom_sheet_settings_hint_price">Value</string>
    <string name="bottom_sheet_settings_title">Add Saloon</string>
    <string name="bottom_sheet_settings_hint_saloon_number">Number/Letter</string>
    <string name="bottom_sheet_settings_btn">Save</string>
    <string name="bottom_sheet_settings_desc">Unit</string>
</resources>